--- a/.gitignore
+++ b/.gitignore
@@ -103,8 +103,7 @@ venv.bak/
 # mypy
 .mypy_cache/
 .idea/workspace.xml
-.idea/vcs.xml
-.idea/modules.xml
-.idea/misc.xml
-.idea/mail_test.iml
 
+
+#ide
+.idea/*
